force-app/main/default/objects/Delivery_Schedule__c/Delivery_Schedule__c.object-meta.xml
<CustomObject>
    <label>Delivery Schedule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Schedules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>