force-app/main/default/objects/Delivery_Schedule__c/fields/Cargo_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Multiplier__c</fullName>
    <label>Cargo Multiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>