force-app/main/default/objects/Delivery_Schedule__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>