force-app/main/default/objects/Delivery_Schedule__c/fields/Delivery_Duration__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Duration__c</fullName>
    <label>Delivery Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>