force-app/main/default/objects/Delivery_Schedule__c/fields/DeliveryDays__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDays__c</fullName>
    <formula>IF(Monday__c,&quot;2&quot;,&quot;&quot;)
+IF(Tuesday__c,&quot;3&quot;,&quot;&quot;)
+IF(Wednesday__c,&quot;4&quot;,&quot;&quot;)
+IF(Thursday__c,&quot;5&quot;,&quot;&quot;)
+IF(Friday__c,&quot;6&quot;,&quot;&quot;)
+IF(Saturday__c,&quot;7&quot;,&quot;&quot;)
+IF(Sunday__c,&quot;1&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Days</label>
    <type>Text</type>
</CustomField>