force-app/main/default/objects/Delivery_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CountryCode__c</columns>
    <columns>PostalCode__c</columns>
    <columns>Monday__c</columns>
    <columns>Tuesday__c</columns>
    <columns>Wednesday__c</columns>
    <columns>Thursday__c</columns>
    <columns>Friday__c</columns>
    <columns>Saturday__c</columns>
    <columns>Sunday__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>