force-app/main/default/objects/Delivery_Schedule__c/listViews/FI_Delivery_Schedules.listView-meta.xml
<ListView>
    <fullName>FI_Delivery_Schedules</fullName>
    <columns>NAME</columns>
    <columns>Postal_Code__c</columns>
    <columns>Monday__c</columns>
    <columns>Tuesday__c</columns>
    <columns>Wednesday__c</columns>
    <columns>Thursday__c</columns>
    <columns>Friday__c</columns>
    <columns>Delivery_Duration__c</columns>
    <columns>Delivery_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Code__c</field>
        <operation>equals</operation>
        <value>FI</value>
    </filters>
    <label>FI Delivery Schedules</label>
</ListView>